--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode production",
     "dev": "webpack-dev-server --config ./webpack.config.js --mode development",
     "lint": "eslint .",
-    "prettier": "prettir --write \"**/*.{js, json}\""
+    "prettier": "prettir --write \"**/*.{js, json}\"",
+    "test" : "jest"
   },
   "author": "",
   "license": "MIT",
@@ -16,17 +17,19 @@
     "@babel/preset-env": "^7.9.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "html-webpack-plugin": "^4.2.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^1.19.1"
+    "html-webpack-plugin": "^4.2.0",
+    "jest": "^25.4.0",
+    "prettier": "^1.19.1",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
